--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+Packages/s2339956.com.tw.RichartNotJailbroken_0.1.1_iphoneos-arm.deb
+Packages/s2339956.com.tw.RichartNotJailbroken_0.1.1_iphoneos-arm.zip
